# todo-app

./: .gitignore  CLAUDE.md  DATABASE_SETUP.md
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
backend/: alembic.ini  hello.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_todos_table.py
backend/src/: database.py  main.py
backend/src/models/: __init__.py
backend/tests/: conftest.py
frontend/: .prettierignore  .prettierrc.json  package-lock.json  package.json
frontend/src/: App.tsx  theme.ts
frontend/src/services/: api.ts
frontend/src/types/: api-types.ts
frontend/tests/: setup.ts
specs/001-todo-crud-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-crud-app/checklists/: requirements.md
specs/001-todo-crud-app/contracts/: README.md  api-types.ts  openapi.yaml
